fix add landmark

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <div class="head-card">
-          <img src="./images/image-product-desktop.jpg" alt="" srcset="" />
+          <img src="./images/image-product-desktop.jpg" alt="Parfume" />
         </div>
         <div class="body-card">
           <span class="text-gray">P E R F U M E</span>
@@ -52,7 +52,7 @@
         </div>
         
       </div>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by
